# FlameRelay

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CLAUDE.md  CONTRIBUTORS.txt  LICENSE  Procfile  README.md  deploy.sh  docker-compose.docs.yml  docker-compose.local.yml  docker-compose.production.yml  eslint.config.js  justfile  local.yml  manage.py  package-lock.json  package.json  production.yml  pyproject.toml  seed_script.py  tsconfig.json
.devcontainer/: devcontainer.json
.envs/.local/: .django  .postgres
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: ci.yml  cicd.yml  deploy.yml
.zed/: settings.json
TODOs/: CONTRACTS.md  REMOVE_PERMS_CHECKS.md
backend/: admin.py  apps.py  factories.py  location_token.py  models.py  services.py  tasks.py  urls.py  views.py
backend/api/: serializers.py  views.py
backend/management/commands/: seed_data.py
backend/migrations/: 0001_initial.py  0002_alter_checkin_location.py  0003_remove_checkin_city_alter_checkin_location.py  0004_team_unit_team.py  0005_checkin_place.py  0006_alter_checkin_options_alter_unit_identifier.py  0007_alter_checkin_image.py  0008_unit_admin_only_checkin.py  0009_alter_checkin_image.py  0010_alter_checkin_image.py  0011_alter_checkin_image_webp.py  0012_alter_checkin_image.py  0013_alter_checkin_unit.py  0014_contributor_group.py  0014_game_unit_game.py  0015_checkinimage.py  0015_game_unit_game.py  0016_migrate_checkin_images.py  0017_remove_checkin_image.py  0018_checkin_add_location_point.py  0019_checkin_migrate_location_data.py  0020_checkin_finalize_location.py  0021_alter_checkin_message.py  0022_health_check_periodic_task.py  0023_alter_unit_admin_only_checkin_alter_unit_created_by_and_more.py  0024_checkin_anonymous_support.py  0025_checkin_anonymous_name.py
backend/scripts/: seed_script.py
backend/tests/: test_anonymous_checkins.py  test_api_endpoints.py  test_checkin_mail.py  test_checkin_permissions.py  test_location_token.py  test_validators.py
brand/: TRANSLATOR_GUIDE.md  brand-brief.json  brand-guidelines.html
compose/local/django/: Dockerfile  start
compose/local/node/: Dockerfile
compose/local/postgres/: Dockerfile
compose/production/django/: Dockerfile  entrypoint  start
compose/production/nginx/: cloudflare_ips.conf  flamerelay.nginx.conf  update-cloudflare-ips.sh
compose/production/postgres/: Dockerfile  backup_pubkey.asc
compose/production/traefik/: traefik.yml
config/: api_router.py  celery_app.py  constants.py  urls.py  whitenoise_forgiving.py  wsgi.py
config/settings/: base.py  local.py  production.py  test.py
docs/: conf.py  howto.rst  index.rst  make.bat  users.rst
flamerelay/: conftest.py
flamerelay/backend/: admin.py  apps.py  factories.py  models.py  services.py  urls.py  views.py
flamerelay/backend/migrations/: 0001_initial.py  0002_alter_checkin_location.py  0003_remove_checkin_city_alter_checkin_location.py  0004_team_unit_team.py  0006_alter_checkin_options_alter_unit_identifier.py  0007_alter_checkin_image.py
flamerelay/backend/scripts/: seed_script.py
flamerelay/static/css/: project.css
flamerelay/static/js/: App.tsx  AuthContext.tsx  PrivateRoute.tsx  api.ts  declarations.d.ts  global.d.ts  i18n.ts  project.tsx  styles.ts  vendors.js
flamerelay/static/sass/: custom_bootstrap_vars.scss  project.scss
flamerelay/templates/: 403.html  403_csrf.html  404.html  500.html  FRONTEND.md  base.html  spa.html
flamerelay/templates/account/: account_inactive.html  (+15 more)
flamerelay/users/: adapters.py  admin.py  apps.py  context_processors.py  forms.py  models.py  services.py  urls.py  views.py
plans/: PASSKEYS.md
requirements/: base.txt  local.txt  production.txt
scripts/: find-duplicate-translations.py  generate-favicons.mjs  sync-translations.mjs  unused-translations.mjs
tools/: png_to_webp.py
webpack/: common.config.js  dev.config.js  prod.config.js
(+105 files in other folders)
